--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -6,14 +6,14 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Clean Blog - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="../static/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../css/styles.css" rel="stylesheet" />
+        <link href="../static/styles.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
@@ -23,7 +23,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('../assets/img/marslandscape.jpeg')">
+        <header class="masthead" style="background-image: url('../static/marslandscape.jpeg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -31,7 +31,7 @@
                             <h1>Mars Scraper</h1>
                             <span class="subheading">A web-scraper for all things Mars!</span>
                             <br>
-                            <a class="btn btn-danger btn-large">
+                            <a class="btn btn-danger btn-large" href="/scrape">
                                 CLICK TO SCRAPE MARS
                               </a>
                         </div>
@@ -47,48 +47,49 @@
                     <div class="post-preview">
                         <a>
                             <h2 class="post-title">Latest Mars News</h2>
-                            <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
+                            <h3 class="post-subtitle">{{ mars.news_title }}</h3>
                         </a>
                         <p class="post-meta">
-                            Posted by on September 24, 2021
+                            P{{ mars.news_p }}
                         </p>
                     </div>
                 <!-- Divider-->
                 <hr class="my-4" />
             </div> 
-            <div>   
-                <!-- Post preview-->
-                <div class="post-preview">
-                    <a href="post.html"><h2 class="post-title">Featured Mars Image</h2></a>
-                    <p class="post-meta">
-                        Posted byon September 18, 2021
-                    </p>
+            <div class=row>
+                <div class=col-7>   
+                    <!-- Post preview-->
+                    <div class="post-preview">
+                        <a><h2 class="post-title">Featured Mars Image</h2></a>
+                        <img class="card-img-bottom img-fluid zoom" src="{{ mars.featured_image_url }}" alt="Featured Mars Image">
+
+                    </div>
+                </div> 
+                <div class=col-5>   
+                    <!-- Post preview-->
+                    <div class="post-preview">
+                        <a>
+                            <h2 class="post-title">Mars Facts Table</h2>
+                        </a>
+                        <p class="card-text" id="dark-font">{{ mars.fact_table | safe }}</p>
+
+                    </div>
                 </div>
-                <!-- Divider-->
-                <hr class="my-4" />
-                <!-- Post preview-->
-                <div class="post-preview">
-                    <a href="post.html">
-                        <h2 class="post-title">Mars Facts Table</h2>
-                    </a>
-                    <p class="post-meta">
-                        Posted by on August 24, 2021
-                    </p>
-                </div>
-                <!-- Divider-->
-                <hr class="my-4" />
-                <!-- Post preview-->
-                <div class="post-preview">
-                    <a href="post.html">
-                        <h2 class="post-title">Mars Hemispheres</h2>
-                        <h3 class="post-subtitle">Many say exploration is part of our destiny, but it’s actually our duty to future generations.</h3>
-                    </a>
-                    <p class="post-meta">
-                        Posted by on July 8, 2021
-                    </p>
-                </div>
+            </div>        
+                    <!-- Divider-->
+                    <hr class="my-4" />
+                    <!-- Post preview-->
+                    <div class="post-preview">
+                        <a>
+                            <h2 class="post-title">Mars Hemispheres</h2>
+                            <h3 class="post-subtitle">Many say exploration is part of our destiny, but it’s actually our duty to future generations.</h3>
+                        </a>
+                        <p class="post-meta">
+                            Posted on July 8, 2021
+                        </p>
+                    </div>
             
-            </div>
+            
         </div>
         <!-- Footer-->
         <footer class="border-top">
@@ -112,7 +113,5 @@
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
     </body>
 </html>
