trying to fix table

--- a/Missions_to_Mars/static/styles.css
+++ b/Missions_to_Mars/static/styles.css
@@ -301,10 +301,10 @@ svg {
   vertical-align: middle;
 }
 
-table {
+/* table {
   caption-side: bottom;
   border-collapse: collapse;
-}
+} */
 
 caption {
   padding-top: 0.5rem;
